# Foundations_of_Model_Context_Protocol_MCP

./: .gitignore  README.md  greeter.py  pyproject.toml
LitServe_MCP/: client_litserve.py  mcp_litserve.md  server.py
MCP_AssemblyAI/: doc_tools.py  first_simple_llm.py  first_tool.py  gdocs_mcp_server.py  second_tool_agent.py  third_protocol_agent.py  zero_simple_llm.py
MCP_filecounter/: client_filecounter.py  filecounter.py  mcp_filecounter.md
MCP_greeter/: client_greeter.py  greeter.py  mcp_greeter.md
Pokemon_MCP_Server/: client_poke.py  mcp_poke.md  poke.py
Synthetic_Data_Vault-SDV_with_MCP/: client_sdv.py  sdv_with_mcp.md  server.py  tools.py
config/: settings.py
fastapi-mcp/: docker-compose.yml
fastapi-mcp/app/: main.py
multi-Agent_deep_research_mcp_linux/: Installing_and_Running_Ollama.sh  agents.py  app.py  server.py
simple_MCP_weather_server/: client.py  mcp_weather.md  weather.py
