[project]
name = "model-context-protocol-mcp"
version = "0.1.0"
description = "O protocolo Protocolo de contexto de modelo (MCP) é um padrão aberto que permite que grandes modelos de linguagem interajam dinamicamente com ferramentas externas, bancos de dados e APIs por meio de uma interface padronizada."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.33.0",
    "litserve>=0.2.12",
    "mcp[cli]>=1.9.4",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
